# RunCore

./: .gitignore  ATIR_SPEC.md  CHANGELOG.md  Dockerfile  LICENSE  PATENT_CLAIMS.md  PITCH.md  README.md  RunCore.command  Setup.command  demo_trace.json  pyproject.toml  render.yaml  serve.py  setup.py
.github/actions/runcore-gate/: action.yml
.github/workflows/: ci.yml
.runcore/: config.json
.runcore/reports/: 455da81a-d6d2-4c71-bb03-8eab17be05d9.html  455da81a-d6d2-4c71-bb03-8eab17be05d9.json  7ca5de55-2220-4331-837a-e78eb0b99636.html  7ca5de55-2220-4331-837a-e78eb0b99636.json  benchmark.html  benchmark.json  test-run-001.json
.runcore/traces/: latest.json
benchmarks/: __init__.py  certification.py  reporter.py  run_benchmark.py  runner.py  tasks.py
benchmarks/agents/: __init__.py  base.py
benchmarks/results/certifications/: runcore_cert_20260625_084607_groq.html  runcore_cert_20260625_084607_groq.json  runcore_cert_20260625_090229_groq.html  runcore_cert_20260625_090229_groq.json  runcore_cert_20260625_093714_ollama.html  runcore_cert_20260625_093714_ollama.json  runcore_cert_20260625_100149_ollama.html  runcore_cert_20260625_100149_ollama.json  runcore_cert_20260625_100844_ollama.html  runcore_cert_20260625_100844_ollama.json  runcore_cert_20260625_101232_ollama.html  runcore_cert_20260625_101232_ollama.json  runcore_cert_20260625_101621_ollama.html  runcore_cert_20260625_101621_ollama.json  runcore_cert_20260625_102655_ollama.html  runcore_cert_20260625_102655_ollama.json  runcore_cert_20260625_103444_ollama.html  runcore_cert_20260625_103444_ollama.json  runcore_cert_20260625_123350_ollama.html  runcore_cert_20260625_123350_ollama.json  runcore_cert_20260625_124516_ollama.html  runcore_cert_20260625_124516_ollama.json  runcore_cert_20260625_134353_ollama.html  runcore_cert_20260625_134353_ollama.json
deploy/: .env.example  Caddyfile  backup-db.sh  deploy.sh  docker-compose.yml  runcore.service
docs/: AWS_MIGRATION.md  BUSINESS.md  CI_GATE.md  GO_TO_MARKET.md  INTEGRATION.md  MANIFESTO.md  METRICS.md  PHASE_A_EXECUTION.md  PLATAFORMA_VISAO.docx  PLATAFORMA_VISAO.md  QUICKSTART_NO_TERMINAL.md  REPOSITION_AUDIT.md  RUNCORE_SCORE_SPEC.md  STRATEGY.md  TESTING_GUIDE.md
docs/ci/: example-workflow.yml
docs/cookbook/: 01_first_trace.md  02_guards.md  03_advisor.md  04_cloud_push.md  05_frameworks.md
examples/: demo_runcore.py
runcore/: __init__.py
runcore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runcore/advisor/: __init__.py  analyzer.py  prescriptions.py
runcore/agents/: __init__.py  base.py  coding.py  real.py  research.py  simulated.py  support.py
runcore/atir/: __init__.py  converter.py  spec.py
runcore/benchmark/: __init__.py  comparison.py  evaluator.py  metrics.py  profile.py  provider_bench.py  runner.py
runcore/cli/: __init__.py  main.py
runcore/context/: __init__.py  blocks.py  cacheability.py  compiler.py  dedupe.py  fingerprint.py
runcore/core/: __init__.py  config.py  enums.py  exceptions.py  models.py
runcore/loops/: __init__.py  detector.py  policies.py  similarity.py
runcore/monitor/: __init__.py  daemon.py  models.py  notifier.py  watcher.py
runcore/providers/: __init__.py  base.py  gemini.py  groq.py  http_agent.py  ollama.py
runcore/replacement/: __init__.py  detector.py  patterns.py
runcore/reports/: __init__.py  generator.py
runcore/reports/templates/: report.html.j2
runcore/sdk/: __init__.py  capture.py  cloud.py  context.py  guards.py  instrument.py  proxy.py
runcore/sdk/adapters/: __init__.py  anthropic.py  autogen.py  crewai.py  langchain.py  langgraph.py  openai.py
runcore/server/: __init__.py  app.py  billing.py  config.py  email_send.py  storage.py  stripe_billing.py
runcore/tools/: __init__.py  compression.py  optimizer.py  ranking.py  registry.py
runcore/trace/: __init__.py  collector.py  cost.py  storage.py  tokens.py
tests/fixtures/: support.json
tests/integration/: conftest.py  test_full_pipeline.py  test_gemini.py  test_groq.py  test_ollama.py
tests/unit/: test_adapters.py  test_adapters_langchain.py  test_advisor.py  test_atir.py  test_benchmark.py  test_billing.py  test_ci_gate.py  test_cloud.py  test_cloud_push.py  test_context.py  test_elision.py  test_guards.py  test_loops.py  test_monitor.py  test_sdk.py  test_server.py  test_tools.py  test_trace.py
