[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runcore"
version = "0.11.0"
description = "Cost-control runtime for AI agents — cut duplicate calls, context bloat and loops automatically, with proof task success didn't drop"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "RunCore", email = "ppereira@saber3d.pt" },
]
keywords = [
    "llm", "agent", "optimization", "benchmark", "observability",
    "anthropic", "openai", "atir", "cost", "tracing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tiktoken>=0.6.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai    = ["openai>=1.0.0"]
langchain = ["langchain-core>=0.1.0"]
groq      = ["groq>=0.9.0"]
gemini    = ["google-generativeai>=0.7.0"]
ollama    = ["ollama>=0.2.0"]
server    = [
    "httpx>=0.27.0",
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
]
all       = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "langchain-core>=0.1.0",
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    "ollama>=0.2.0",
    "httpx>=0.27.0",
]
dev       = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "anthropic>=0.25.0",
]

[project.urls]
Homepage      = "https://github.com/ptpaulinho/RunCore"
Documentation = "https://github.com/ptpaulinho/RunCore#readme"
Repository    = "https://github.com/ptpaulinho/RunCore"
"Bug Tracker" = "https://github.com/ptpaulinho/RunCore/issues"
"ATIR Spec"   = "https://github.com/ptpaulinho/RunCore/blob/main/ATIR_SPEC.md"

[project.scripts]
runcore = "runcore.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests that run real benchmark pipelines (deselect with -m 'not slow')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["runcore*", "benchmarks*"]

[tool.setuptools.package-data]
"runcore.reports" = ["templates/*.j2"]
"benchmarks" = ["*.py"]
"benchmarks.agents" = ["*.py"]
